# aws-policy-processor

./: Cargo.toml  README.md
aws-policy-processor/: Cargo.toml
aws-policy-processor/src/: binpack.rs  lib.rs  model.rs  validator.rs
aws-service-reference-types/: Cargo.toml
aws-service-reference-types/src/: lib.rs
aws-service-references/: Cargo.toml  README.md  build.rs
aws-service-references/examples/: check_all_services.rs  parse_service_ref.rs
aws-service-references/src/: generated.rs  lib.rs
sampledocs/: scp_01.json
service-code-generator/: Cargo.toml
service-code-generator/src/: generator.rs  lib.rs  loader.rs
service-reference-data/: a2c.json  a4b.json  access-analyzer.json  account.json  acm-pca.json  acm.json  activate.json  aiops.json  airflow.json  amplify.json  amplifybackend.json  amplifyuibuilder.json  aoss.json  apigateway.json  app-integrations.json  appconfig.json  appfabric.json  appflow.json  application-autoscaling.json  application-cost-profiler.json  application-signals.json  application-transformation.json  applicationinsights.json  appmesh-preview.json  appmesh.json  apprunner.json  appstream.json  appstudio.json  appsync.json  apptest.json  aps.json  arc-region-switch.json  arc-zonal-shift.json  arsenal.json  artifact.json  athena.json  auditmanager.json  autoscaling-plans.json  autoscaling.json  aws-marketplace-management.json  (+390 more)
src/: binpack.rs  lib.rs  main.rs  model.rs  statement_merger.rs  validator.rs
xtask/: Cargo.toml
xtask/src/: main.rs
