[package]
name = "aws-policy-processor"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.5"
derive_builder = "0.20.2"
miette = { version = "7.6.0", features = ["fancy"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

[dev-dependencies]
indoc = "2.0.6"
