[package]
name = "service-code-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-service-reference-types = { path = "../aws-service-reference-types" }
color-eyre = "0.6.5"
prettyplease = "0.2.36"
proc-macro2 = "1.0.95"
quote = "1.0.40"
rayon = "1.10.0"
serde_json = "1.0.142"
syn = "2.0.104"
thiserror = "2.0.12"
