[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
color-eyre = "0.6.5"
reqwest = { version = "0.12.22", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
service-code-generator = { version = "0.1.0", path = "../service-code-generator" }
xshell = "0.2.7"
